--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 10:05:02 2018</p>
+         Last Run: Sun Nov 18 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Rain</td>
                         <td>4</td>
-                        <td>2</td>
-                        <td>52</td>
+                        <td>4</td>
+                        <td>69</td>
                         <td>69</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>5</td>
                         <td>WNW</td>
-                        <td>90</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>14</td>
-                        <td>69</td>
+                        <td>55</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>6</td>
                         <td>WNW</td>
-                        <td>93</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>5</td>
-                        <td>2</td>
-                        <td>14</td>
-                        <td>63</td>
+                        <td>4</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>67</td>
+                        <td>0</td>
+                        <td>6</td>
                         <td>WNW</td>
-                        <td>97</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "4",
                  "2",
-                 "2",
-                 "2"
+                 "4"
                ]
              },
              {
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "52",
-                 "14",
-                 "14"
+                 "69",
+                 "55",
+                 "0"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "69",
-                 "63"
+                 "70",
+                 "67"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
-                 "93",
-                 "97"
+                 "100",
+                 "92",
+                 "95"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 10:05:02 2018</p>
+         Last Run: Sun Nov 18 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -254,7 +254,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -266,7 +266,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -278,7 +278,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
                  "7",
-                 "7"
+                 "8",
+                 "8"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 10:05:02 2018</p>
+         Last Run: Sun Nov 18 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,33 +461,33 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>57</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
                         <td>51</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SW</td>
-                        <td>50</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
                         <td>53</td>
                         <td>0</td>
@@ -522,7 +522,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-3"
+                 "-2"
                ]
              },
              {
@@ -534,7 +534,7 @@
                "data":[
                  "3",
                  "2",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -602,7 +602,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
+                 "50",
                  "51",
                  "53"
                ]
@@ -613,8 +613,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "50",
+                 "68",
+                 "61",
                  "44"
                ]
              }
