--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 11:05:02 2018</p>
+         Last Run: Sun Nov 18 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>12:00 PM</td>
-                        <td>Rain</td>
-                        <td>4</td>
-                        <td>4</td>
-                        <td>69</td>
-                        <td>69</td>
-                        <td>0</td>
-                        <td>5</td>
-                        <td>WNW</td>
-                        <td>100</td>
-                     </tr>
-                     <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>2</td>
-                        <td>55</td>
-                        <td>70</td>
+                        <td>73</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>WNW</td>
-                        <td>92</td>
+                        <td>11</td>
+                        <td>NW</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>5</td>
-                        <td>4</td>
+                        <td>3</td>
+                        <td>44</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>67</td>
-                        <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>95</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -77,7 +65,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -89,9 +76,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "4",
                  "2",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -101,8 +87,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "4",
-                 "4",
+                 "5",
                  "5"
                ]
              }
@@ -149,7 +134,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -160,9 +144,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "69",
-                 "55",
-                 "0"
+                 "73",
+                 "44"
                ]
              },
              {
@@ -171,9 +154,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "70",
-                 "67"
+                 "67",
+                 "66"
                ]
              },
              {
@@ -182,9 +164,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "100",
-                 "92",
-                 "95"
+                 "88",
+                 "90"
                ]
              }
            ]
@@ -225,7 +206,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 11:05:02 2018</p>
+         Last Run: Sun Nov 18 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,9 +228,9 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>3</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>4</td>
                         <td>67</td>
                         <td>0</td>
                         <td>10</td>
@@ -266,19 +247,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>71</td>
+                        <td>2</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
                         <td>8</td>
+                        <td>W</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +286,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-3",
                  "-4"
                ]
@@ -317,7 +298,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "0",
                  "-1"
                ]
@@ -376,9 +357,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "4",
                  "2",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -389,7 +370,7 @@
                "data":[
                  "67",
                  "69",
-                 "71"
+                 "69"
                ]
              },
              {
@@ -399,8 +380,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "7",
-                 "8",
-                 "8"
+                 "9",
+                 "11"
                ]
              }
            ]
@@ -440,7 +421,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 11:05:02 2018</p>
+         Last Run: Sun Nov 18 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -486,14 +467,14 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>1</td>
+                        <td>-3</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>44</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -522,7 +503,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -534,7 +515,7 @@
                "data":[
                  "3",
                  "2",
-                 "2"
+                 "1"
                ]
              }
            ]
@@ -604,7 +585,7 @@
                "data":[
                  "50",
                  "51",
-                 "53"
+                 "52"
                ]
              },
              {
@@ -615,7 +596,7 @@
                "data":[
                  "68",
                  "61",
-                 "44"
+                 "54"
                ]
              }
            ]
