--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 12:05:03 2018</p>
+         Last Run: Sun Nov 18 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>01:00 PM</td>
+                        <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>73</td>
-                        <td>67</td>
+                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NW</td>
                         <td>88</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>5</td>
-                        <td>3</td>
-                        <td>44</td>
-                        <td>66</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -65,7 +53,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -76,8 +63,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "2",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -87,7 +73,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "5",
                  "5"
                ]
              }
@@ -134,7 +119,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -144,8 +128,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "73",
-                 "44"
+                 "71"
                ]
              },
              {
@@ -154,8 +137,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "66"
+                 "72"
                ]
              },
              {
@@ -164,8 +146,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "90"
+                 "88"
                ]
              }
            ]
@@ -206,7 +187,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 12:05:03 2018</p>
+         Last Run: Sun Nov 18 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -230,36 +211,36 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>67</td>
+                        <td>3</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>2</td>
-                        <td>69</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>3</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>69</td>
+                        <td>-2</td>
+                        <td>-5</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>11</td>
+                        <td>WSW</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -287,8 +268,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-3",
-                 "-4"
+                 "-4",
+                 "-5"
                ]
              },
              {
@@ -299,8 +280,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "0",
-                 "-1"
+                 "-1",
+                 "-2"
                ]
              }
            ]
@@ -357,9 +338,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "2",
-                 "2"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -368,9 +349,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "69",
-                 "69"
+                 "68",
+                 "71",
+                 "73"
                ]
              },
              {
@@ -379,9 +360,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "9",
-                 "11"
+                 "8",
+                 "10",
+                 "10"
                ]
              }
            ]
@@ -421,7 +402,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 12:05:03 2018</p>
+         Last Run: Sun Nov 18 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -442,39 +423,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
-                        <td>0</td>
-                        <td>50</td>
-                        <td>0</td>
-                        <td>14</td>
-                        <td>SW</td>
-                        <td>68</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>49</td>
+                        <td>0</td>
+                        <td>14</td>
+                        <td>SSW</td>
+                        <td>57</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>2</td>
+                        <td>-2</td>
+                        <td>0</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>SW</td>
-                        <td>61</td>
+                        <td>SSW</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>52</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>SW</td>
-                        <td>54</td>
+                        <td>11</td>
+                        <td>SSW</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -501,9 +482,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
                  "-2",
-                 "-3"
+                 "-2",
+                 "-2"
                ]
              },
              {
@@ -513,7 +494,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
+                 "2",
                  "2",
                  "1"
                ]
@@ -583,9 +564,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "51",
-                 "52"
+                 "49",
+                 "53",
+                 "55"
                ]
              },
              {
@@ -594,9 +575,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "61",
-                 "54"
+                 "57",
+                 "54",
+                 "50"
                ]
              }
            ]
